# sfmap

./: .gitignore  AI.md  CLAUDE.md  DEVELOPMENT.md  README.md  SALESFORCE_101.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
data/: apex_controllers.txt
sfmap/: __init__.py  __main__.py  cli.py
sfmap/core/: client.py  session.py
sfmap/core/modules/: apex.py
sfmap/core/utils/: common.py
src/sfmap/: cli.py
src/sfmap/commands/: _context.py  _phase_runner.py  assess.py  aura.py  detect.py  files.py  lightning.py  report.py  rest.py  surface.py
src/sfmap/core/: client.py  session.py
src/sfmap/core/modules/: apex.py  apexrest.py  bootstrap.py  chatter.py  config.py  content.py  crud.py  dump.py  enum.py  exposure.py  flow.py  graphql.py  idor.py  injection.py  lightning_controllers.py  listviews.py  network.py  relatedlist.py  reporter.py  soql.py  staticresource.py  tooling.py
src/sfmap/core/utils/: autocontext.py  burp.py  common.py  detect.py  identity.py  logbook.py  storage.py
src/sfmap/data/: apex_controllers.txt  apexrest_endpoints.txt  flows.txt  lightning_controllers.txt  static_resources.txt  vf_pages.txt
src/sfmap/report_assets/: app.js  style.css
wordlists/: apex_controllers.txt
