[project]
name = "sfmap"
version = "0.1.0"
description = "Salesforce Aura security assessment toolkit"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "loguru>=0.7.3",
]

[project.scripts]
sfmap = "sfmap.cli:main"

[build-system]
requires = ["uv_build>=0.9.14,<0.10.0"]
build-backend = "uv_build"
