[build-system]
requires = ["uv_build>=0.11.8,<0.12"]
build-backend = "uv_build"

[project]
name = "sfmap"
version = "0.1.0"
description = "Salesforce Aura security assessment toolkit"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "loguru>=0.7.3",
]

[project.urls]
repository = "https://github.com/n3rada/sfmap"

[project.scripts]
sfmap = "sfmap.cli:main"

[tool.uv_build]
include = ["src/sfmap/data/*", "src/sfmap/report_assets/*"]
